[gd_scene load_steps=11 format=2]

[ext_resource path="res://props/World.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/UIWrapper.gd" type="Script" id=2]
[ext_resource path="res://assets/img/ui/basket.png" type="Texture" id=3]
[ext_resource path="res://assets/img/ui/ui_label_item.png" type="Texture" id=4]
[ext_resource path="res://props/setups/Theme/ArtUI.tres" type="Theme" id=5]
[ext_resource path="res://assets/img/ui/Honey Silk.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://props/setups/Theme/LangUI.tres" type="Theme" id=7]
[ext_resource path="res://props/LayoutSummary.tscn" type="PackedScene" id=8]
[ext_resource path="res://props/Audio.tscn" type="PackedScene" id=9]

[sub_resource type="DynamicFont" id=1]
size = 79
use_mipmaps = true
use_filter = true
font_data = ExtResource( 6 )

[node name="UIWrapper" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="World" parent="." instance=ExtResource( 1 )]

[node name="Layout" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Counter" type="NinePatchRect" parent="Layout"]
margin_left = 30.0
margin_top = 30.0
margin_right = 228.0
margin_bottom = 90.0
texture = ExtResource( 4 )
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="ItemPicked" type="Label" parent="Layout/Counter"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -27.0
margin_right = 97.0
margin_bottom = 27.0
theme = ExtResource( 5 )
text = "12"
align = 1
valign = 1

[node name="Icon" type="TextureRect" parent="Layout/Counter"]
anchor_left = 0.905
anchor_top = 0.5
anchor_right = 0.905
anchor_bottom = 0.5
margin_left = -80.8
margin_top = -51.2
margin_bottom = 51.2
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource( 3 )
expand = true
stretch_mode = 1
__meta__ = {
"_editor_description_": "Scale = (256)/2*0.8"
}

[node name="CounterLastItem" type="NinePatchRect" parent="Layout"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -198.0
margin_top = 30.0
margin_right = -30.0
margin_bottom = 90.0
texture = ExtResource( 4 )
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="Icon" type="TextureRect" parent="Layout/CounterLastItem"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -40.4
margin_top = -51.2
margin_right = 40.4
margin_bottom = 51.2
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource( 3 )
expand = true
stretch_mode = 5
__meta__ = {
"_editor_description_": "Scale = (256)/2*0.8"
}

[node name="CounterTime" type="NinePatchRect" parent="Layout"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -99.0
margin_top = 30.0
margin_right = 99.0
margin_bottom = 90.0
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="SessionTime" type="Label" parent="Layout/CounterTime"]
anchor_left = 0.5
anchor_right = 0.5
grow_horizontal = 2
theme = ExtResource( 5 )
custom_fonts/font = SubResource( 1 )
text = "240.9"
align = 1

[node name="Note" type="Label" parent="Layout/CounterTime"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -112.5
margin_top = 95.0
margin_right = 112.5
margin_bottom = 31.0
text = "B to add time, SPACE to basket-brake
M to mute Music, N to mute Sound"
align = 1

[node name="BottomTextBar" type="GridContainer" parent="Layout"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -142.0
theme = ExtResource( 7 )
columns = 3

[node name="TextL" type="VBoxContainer" parent="Layout/BottomTextBar"]
margin_right = 339.0
margin_bottom = 122.0
grow_horizontal = 0
size_flags_horizontal = 3

[node name="En" type="Label" parent="Layout/BottomTextBar/TextL"]
margin_right = 339.0
margin_bottom = 38.0
text = "Text English"
align = 1
valign = 1

[node name="Fr" type="Label" parent="Layout/BottomTextBar/TextL"]
margin_top = 42.0
margin_right = 339.0
margin_bottom = 80.0
text = "Text French"
align = 1
valign = 1

[node name="Cz" type="Label" parent="Layout/BottomTextBar/TextL"]
margin_top = 84.0
margin_right = 339.0
margin_bottom = 122.0
text = "Text Czech"
align = 1
valign = 1

[node name="MarginContainer" type="MarginContainer" parent="Layout/BottomTextBar"]
margin_left = 343.0
margin_right = 682.0
margin_bottom = 122.0
size_flags_horizontal = 3

[node name="TextureRect" type="TextureRect" parent="Layout/BottomTextBar/MarginContainer"]
margin_right = 339.0
margin_bottom = 122.0

[node name="TextR" type="VBoxContainer" parent="Layout/BottomTextBar"]
margin_left = 686.0
margin_right = 1024.0
margin_bottom = 122.0
size_flags_horizontal = 3
alignment = 1

[node name="En" type="Label" parent="Layout/BottomTextBar/TextR"]
margin_right = 338.0
margin_bottom = 38.0
text = "Text English"
align = 1
valign = 1

[node name="Fr" type="Label" parent="Layout/BottomTextBar/TextR"]
margin_top = 42.0
margin_right = 338.0
margin_bottom = 80.0
text = "Text French"
align = 1
valign = 1

[node name="Cz" type="Label" parent="Layout/BottomTextBar/TextR"]
margin_top = 84.0
margin_right = 338.0
margin_bottom = 122.0
text = "Text Czech"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Layout"]
visible = false
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 13.0

[node name="Second" type="HBoxContainer" parent="Layout/VBoxContainer"]
margin_right = 1024.0
grow_horizontal = 2
grow_vertical = 2

[node name="Debug" type="Control" parent="Layout/VBoxContainer/Second"]

[node name="CollisionRay" type="CheckButton" parent="Layout/VBoxContainer/Second/Debug"]
margin_right = 40.0
margin_bottom = 40.0

[node name="LayoutSummary" parent="." instance=ExtResource( 8 )]
visible = false

[node name="Audio" parent="." instance=ExtResource( 9 )]

[node name="AnimTimerTooltip" type="Timer" parent="."]
wait_time = 7.0
one_shot = true
autostart = true

[connection signal="endgame" from="World" to="." method="_on_World_endgame"]
[connection signal="req_ui_update" from="World" to="." method="_on_World_req_ui_update"]
[connection signal="timeout" from="AnimTimerTooltip" to="." method="_on_AnimTimerTooltip_timeout"]
